# chessEngine

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/: functions.h  imgui-style.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: functions.cpp
